--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.11.1",
+    "axios": "^1.10.0",
     "framer-motion": "^12.23.3",
     "next": "15.3.5",
     "prisma": "^6.11.1",
