--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "dependencies": {
     "@prisma/client": "^6.11.1",
     "axios": "^1.10.0",
+    "canvas-confetti": "^1.6.0",
     "framer-motion": "^12.23.3",
     "next": "15.3.5",
     "prisma": "^6.11.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0",
-      "canvas-confetti": "^1.6.0"
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
